# avian_space

./: .gitignore  Cargo.toml  README.md  training_config.yaml
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.githooks/: pre-push
.github/workflows/: ci.yml
assets/: CREDITS-SPRITES.md  allies.yaml  commodities.yaml  companions.yaml  enemies.yaml  escort_system.yaml  factions.yaml  mining_system.yaml  mission_templates.yaml  missions.yaml  npc.yaml  npcs.yaml  outfitter_items.yaml  ships.yaml  simulator_system.yaml  star_systems.yaml  weapons.yaml
assets/music/: CREDITS-MUSIC.md
assets/ship_sprites/: generate_sprites.py
assets/sounds/: CREDITS-SOUNDS.md  info.md
docs/: building_design_bible.md  companions_design.md  cooperation_plan.md  economic_loop_learnings.md  faction_progression_redesign.md  factions_and_world_design_bible.md  fuel_rescue_plan.md  galactic_war_design.md  interior_graphics_options.md  interior_tileset_research.md  interiors_design.md  maze_interiors_plan.md  music_and_ambience_plan.md  onfoot_unification.md  overnight_run16.md  ship_design_bible.md  steam_release.md  training_log.md  weapons_overview.md  world_objects_design_bible.md
docs/biab_briefs/: 01_faction_space_themes.md  02_surface_bar_title_themes.md
scripts/: AppIcon.icns  README.md  TILEGEN.md  analysis_requirements.txt  analyze_progress.py  analyze_rewards.py  blob47_test_cases.yaml  build_macos_app.sh  buildings.py  buildings_scifi.py  buildings_scify.py  ci_status.sh  combine_spritesheet.py  convert_wav_to_ogg.sh  coop_handoff.sh  economy.py  experiment_summary.py  experiment_summary_cron.sh  gen_biab_musicxml.py  gen_crests.py  gen_wireframes.py  generate_app_icon.py  generate_planet_sprites.py  generate_sprites.py  hourly_backup.py  miner_bc_ramp.sh  miner_dropscale.sh  miner_fill.sh  miner_profit_v2.sh  mission_flowchart.py  monitor_snapshot.sh  monitor_training.py  objects.py  overnight_monitor.py  people_lpc_config.py  people_lpc_gen.py  process_biab_render.py  reward_monitor_cron.sh  sprites_environment.yml  sync_bug_reports.sh  (+7 more)
src/: README.md  ai_ships.rs  ambience.rs  asteroids.rs  bug_report.rs  carrier.rs  character_compositor.rs  comms.rs  companions.rs  config.rs  consts.rs  embedded_assets.rs  experiments.rs  explosions.rs  fbm.rs  fuel.rs  gae.rs  galaxy.rs  game_save.rs  help_ui.rs  hud.rs  item_universe.rs  jump_ui.rs  main.rs  main_menu.rs  model.rs  multiworld_spike.rs  multiworld_train.rs  music.rs  optimal_control.rs  pickups.rs  planet_ui.rs  planets.rs  policy_asset.rs  ppo.rs  rl_collection.rs  rl_obs.rs  session.rs  settings.rs  sfx.rs  (+21 more)
(+144 files in other folders)
