[package]
name = "avian_space"
version = "0.1.0"
edition = "2024"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
avian2d = "0.5.0"
bevy = "0.18.1"
bevy_egui = "0.39.1"
egui = "0.33.3"
rand = "0.8.0"
serde = {version="1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
burn = { version = "0.20", default-features = false, features = ["wgpu", "ndarray", "std", "train", "autodiff"] }
tensorboard-rs = "0.5"
# Force naga 26 to compile with termcolor to fix WriteColor trait error
naga = { version = "=26.0.0", features = ["termcolor", "wgsl-in"] }
bevy_ecs_tilemap = "0.18"
bevy_common_assets = { version = "0.16.0", features = ["ron"] }
ron = "0.12.1"
